Fixed Menu Overflow

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -114,7 +114,7 @@ nav a:hover::before {
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 100%;
+        width: 0%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
     }
@@ -148,6 +148,7 @@ nav a:hover::before {
 }
 
 .nav-active {
+    width: 100%;
     transform: translateX(0%);
 }
 
